# lovelace

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Procfile  README.md  codecov.yml  diesel.toml  grcov.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-error.md  feature_request.md
.github/workflows/: coverage.yml  deploy.yml  test.yml
docs/: ARCHITECTURE.md  DOCUMENTATION.md
licenses/: MIT.md
main/: Cargo.toml
main/src/: auth.rs  class.rs  css_names.rs  db.rs  email.rs  main.rs  models.rs  notifications.rs  schema.rs  utils.rs
main/src/auth/: login.rs  logout.rs  mod.rs  register.rs  reset.rs  verify.rs
main/src/calendar/: mod.rs  test_calendar.rs
main/src/calendar/connect/: caldav.rs  gcal.rs  mod.rs  unauthenticated_caldav.rs
main/src/calendar/scheduler/: mod.rs
main/src/class/: configure.rs  create.rs  delete.rs  invite.rs  join.rs  list.rs  members.rs  messages.rs  mod.rs  overview.rs
main/src/class/messages/: list.rs  mod.rs  view.rs
main/src/class/messages/create/: message.rs  reply.rs
main/src/class/messages/edit/: message.rs  reply.rs
main/src/class/tasks/: asynchronous.rs  mod.rs  synchronous.rs
main/src/class/tasks/asynchronous/: create.rs  delete.rs  edit.rs  mod.rs
main/src/class/tasks/asynchronous/summary/: mod.rs  student.rs  teacher.rs
main/src/class/tasks/asynchronous/view/: mod.rs  student.rs  teacher.rs
main/src/class/tasks/synchronous/: create.rs  delete.rs  edit.rs  list.rs  mod.rs  view.rs
main/src/dashboard/: mod.rs
main/src/home/: mod.rs
main/src/institution/: configure.rs  delete.rs  mod.rs  register.rs  test_ctx.rs
main/src/institution/class/: create.rs
main/src/models/: mod.rs  notification.rs  user.rs
main/src/models/calendar/: mod.rs
main/src/models/class/: async_task.rs  mod.rs  student.rs  sync_task.rs  teacher.rs
main/src/models/class/message/: mod.rs
main/src/models/institution/: administrator.rs  mod.rs  student.rs  student_group.rs  teacher.rs
main/src/models/institution/student_group/: mod.rs  student.rs  teacher.rs
main/src/ui/: mod.rs  navbar.rs  page.rs
main/src/utils/: auto_database_error.rs  error.rs  error_messages.rs  form.rs  html_or_redirect.rs  json_response.rs  mod.rs  permission_error.rs  timezones.rs
migrations/2021-01-09-182807_setup-authentication/: up.sql
migrations/2021-01-09-182807_setup_authentication/: down.sql  up.sql
migrations/2021-01-10-150817_add_class_tables/: down.sql  up.sql
migrations/2021-01-17-181927_add_notification_system/: down.sql  up.sql
migrations/2021-01-19-204914_add-class-messages/: down.sql  up.sql
migrations/2021-01-24-142530_add-tasks/: down.sql  up.sql
migrations/2021-02-02-194718_add-calendar/: up.sql
utils/: README.md
utils/html/: Cargo.toml
utils/html/src/: lib.rs
utils/malvolio/: Cargo.toml  README.md
utils/malvolio/src/: comp.rs  into_vnode.rs  lib.rs  macros.rs  prelude.rs  text.rs  utils.rs
utils/malvolio/src/attributes/: common.rs  mod.rs
utils/malvolio/src/docs/: mod.rs
utils/malvolio/src/tags/: a.rs  br.rs  div.rs  headings.rs  html.rs  img.rs  input.rs  label.rs  meta.rs  mod.rs  noscript.rs  option.rs  p.rs  select.rs  style.rs  title.rs
utils/malvolio/src/tags/body/: body_node.rs  mod.rs
utils/malvolio/src/tags/form/: mod.rs
utils/malvolio/src/tags/head/: head_node.rs  mod.rs
utils/malvolio/tests/: test_display.rs  test_yew_rendering.rs
utils/mercutio/: Cargo.toml
utils/mercutio/src/: lib.rs
utils/mercutio_codegen/: Cargo.toml
utils/mercutio_codegen/src/: inner.rs  lib.rs
utils/mercutio_codegen/tests/: tests.rs
utils/mercutio_codegen/tests/examples/: fail.rs  fail.stderr  pass.rs
utils/mercutio_codegen/tests/write_file/: pass.rs
utils/portia/: Cargo.toml  README.md
utils/portia/src/: card.rs  colour.rs  font.rs  form.rs  levels.rs  lib.rs  margin.rs  padding.rs  render.rs
utils/prospero/: Cargo.toml  README.md
utils/prospero/src/: calendar.rs  client.rs  error.rs  event.rs  lib.rs
utils/prospero/tests/: test.rs
