[package]
name = "main"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
malvolio = { path="../utils/malvolio", features=["with_rocket"] }
thiserror = "1"
chrono = "0.4"
diesel = { version = "1.4.5", features = ["r2d2", "chrono", "postgres"] }
env_logger = "0.8.2"
log = "0.4.0"
diesel_migrations = "1.4.0"
bcrypt = "0.9"
lazy_static = "1.4.0"
regex = "1.4.3"
nanoid = "0.3.0"
derive_builder = "0.9.0"
serde_json = "1"
ureq = { version = "2", features=["json"] }
chrono-tz = { version = "0.5", features=["serde"] }
serde = "1"


[dependencies.rocket_contrib]
version="0.4.6"
default-features=false
features=["diesel_postgres_pool"]

[dev-dependencies]
tokio = {version = "1.0.2", features = ["macros", "rt"]}
wiremock = "0.4.7"
