[package]
name = "main"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
malvolio = { path = "../utils/malvolio", features = ["with_rocket"] }
thiserror = "1.0.23"
chrono = "0.4"
diesel = { version = "1.4.5", features = ["r2d2", "chrono", "postgres"] }
env_logger = "0.8.2"
log = "0.4.14"
diesel_migrations = "1.4.0"
bcrypt = "0.9"
lazy_static = "1.4.0"
regex = "1.4.3"
nanoid = "0.3.0"
derive_builder = "0.9.0"
serde_json = "1.0.62"
ureq = { version = "2.0.1", features = ["json"] }
chrono-tz = { version = "0.5.3", features = ["serde"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0.123", features = ["derive"] }


[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_postgres_pool"]

[dev-dependencies]
tokio = { version = "1.2.0", features = ["macros", "rt"] }
wiremock = "0.4.9"

[profile.release]
lto = true
