[package]
name = "malvolio"
version = "0.2.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"
readme="README.md"
description = "An HTML templating library."
repository = "https://github.com/lovelace-ed/lovelace"
homepage = "https://github.com/lovelace-ed/lovelace"
license = "MPL-2.0"
keywords = ["web-applications", "HTML"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with_rocket = ["rocket"]
with_yew = ["yew"]

[dependencies]
ammonia = "3.1.0"
derivative = "2.2.0"
rocket = { version = "0.4.7", optional = true }
yew = { version = "0.17.4", optional = true }

[dev-dependencies]
scraper = "0.12.0"
wasm-bindgen-test = "0.3.20"

[dev-dependencies.web-sys]
version = "0.3.47"
features = [
  "AbortController",
  "AbortSignal",
  "AnimationEvent",
  "Attr",
  "BinaryType",
  "Blob",
  "BlobPropertyBag",
  "console",
  "DedicatedWorkerGlobalScope",
  "Document",
  "DomTokenList",
  "DragEvent",
  "Element",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "FocusEvent",
  "Headers",
  "HtmlCollection",
  "HtmlElement",
  "HtmlButtonElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "InputEvent",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "MouseEvent",
  "NamedNodeMap",
  "Node",
  "ObserverCallback",
  "PointerEvent",
  "ProgressEvent",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "Text",
  "TouchEvent",
  "TransitionEvent",
  "UiEvent",
  "Url",
  "WebSocket",
  "WheelEvent",
  "Window",
  "Worker",
  "WorkerGlobalScope",
  "WorkerOptions",
]
