[package]
name = "mercutio_codegen"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.12.0"
itertools = "0.10.0"
nanoid = "0.3.0"
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = "1.0.60"

[dev-dependencies]
trybuild = "1.0.41"
mercutio = { path = "../mercutio" }
malvolio = { path = "../malvolio" }
